<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_drawer"
    app:layout_collapseMode="pin"
    app:title="CodeVerse"
    android:background="@color/white"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
...
